# lecture-split

./: README.md  pyproject.toml
src/lecture_split/: cli.py  context_generator.py  extractor.py  models.py  section_detector.py  splitter.py
src/lecture_split.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_context_generator.py  test_extractor.py  test_integration.py  test_section_detector.py  test_splitter.py
