[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-split"
version = "0.1.0"
description = "Split lecture slide PDFs into semantically grouped sections with AI-generated context"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "click>=8.1.0",
]

[project.scripts]
lecture-split = "lecture_split.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
